Completed CRUD for Manager

--- a/src/App.css
+++ b/src/App.css
@@ -59,9 +59,9 @@
 }
 
 .pageBody{
-  margin-left: 18%;
+  margin-left: 250px;
   margin-top: 6%;
-  margin-right: 3%;
+  margin-right: 1%;
 }
 
 .nav-text {
