--- a/src/App.css
+++ b/src/App.css
@@ -96,3 +96,13 @@
   background-color: #174C4F;
   color:white;
 }
+
+.btn-del {
+  background-color: rgb(245, 41, 41);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 6px;
+  width: 100px;
+
+}
