view total created

--- a/src/App.css
+++ b/src/App.css
@@ -103,7 +103,26 @@
 }
 
 .carousel1 {
-  height:150px;
+  height:250px;
   margin: auto;
   width: 350px;
+}
+
+.btn-del{
+  background-color: rgb(245, 41, 41);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 6px;
+  width: 100px;
+}
+
+.btn{
+  background-color:#63C2C7;
+  color:white;
+}
+
+.btn:hover {
+  background-color: #174C4F;
+  color:white;
 }
