--- a/src/App.css
+++ b/src/App.css
@@ -86,3 +86,37 @@
 .drawer_icon:hover{
   color: #63C2C7;
 }
+
+.btn{
+
+  background-color:#63C2C7;
+
+  color:white;
+
+}
+
+
+
+.btn:hover {
+
+  background-color: #174C4F;
+
+  color:white;
+
+}
+
+.btn-del{
+
+  background-color: rgb(245, 41, 41);
+
+  color: white;
+
+  border: none;
+
+  border-radius: 5px;
+
+  padding: 6px;
+
+  width: 100px;
+
+}
