--- a/src/App.css
+++ b/src/App.css
@@ -96,29 +96,6 @@
   width: 100px;
 }
 
-.btn{
-  background-color:#63C2C7;
-  color:white;
-}
-
-.btn{
-
-  background-color:#63C2C7;
-
-  color:white;
-
-}
-
-
-
-.btn:hover {
-
-  background-color: #174C4F;
-
-  color:white;
-
-}
-
 .title{
   color: #174C4F;
   font-weight: bolder;
@@ -158,3 +135,82 @@
   background-color: #174C4F;
   color:white;
 }
+
+.login_container {
+	width: 100%;
+	min-height: 85vh;
+	background-image: url("https://images.pexels.com/photos/325876/pexels-photo-325876.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+	display: flex;
+	align-items: center;
+	justify-content: center;
+  background-size: cover;
+}
+
+.login_form_container {
+	width: 750px;
+	height: 400px;
+	display: flex;
+	border-radius: 10px;
+	box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%),
+		0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%);
+}
+
+.left {
+	flex: 2;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	background-color: #174c4ff8;
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px;
+}
+
+.form_container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.form_container h1 {
+	font-size: 30px;
+  color: white;
+	margin-top: 0;
+}
+
+.input {
+	outline: none;
+	border: none;
+	width: 370px;
+	padding: 15px;
+	border-radius: 10px;
+	background-color: #fbfbfbde;
+	margin: 5px 0;
+	font-size: 16px;
+}
+
+.error_msg {
+	width: 370px;
+	padding: 15px;
+	margin: 5px 0;
+	font-size: 14px;
+	background-color: #f34646;
+	color: white;
+	border-radius: 5px;
+	text-align: center;
+}
+
+.green_btn {
+	border: none;
+	outline: none;
+	padding: 10px 0;
+	border-radius: 20px;
+	width: 150px;
+	font-weight: bold;
+	font-size: 18px;
+	cursor: pointer;
+  background-color: #63C2C7;
+	color: black;
+	margin: 10px;
+}
+
