--- a/src/App.css
+++ b/src/App.css
@@ -153,9 +153,8 @@
 	width: 750px;
 	height: 400px;
 	display: flex;
-	border-radius: 10px;
-	box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%),
-		0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%);
+	border-radius: 15px;
+	box-shadow: 5px 5px 5px
 }
 
 .left {
@@ -215,5 +214,17 @@
   background-color: #63C2C7;
 	color: black;
 	margin: 10px;
+}
+
+.logout_btn{
+   background-color: #174C4F;
+  color:white;
+  border: 3px solid #174C4F;
+  border-radius: 5px;
+  height: 40px;
+}
+
+.logout_btn:hover{
+  border-color: #63C2C7;
 }
 
