--- a/src/App.css
+++ b/src/App.css
@@ -98,17 +98,11 @@
 
 .btn{
   background-color:#63C2C7;
-  color:white;
+  border: 3px solid #174C4F;
+  border-radius: 5px;
+  color:#174C4F;
+  height: 40px;
 }
-
-.btn{
-
-  background-color:#63C2C7;
-
-  color:white;
-
-}
-
 
 
 .btn:hover {
@@ -143,18 +137,14 @@
 .btn-del{
   background-color: rgb(245, 41, 41);
   color: white;
-  border: none;
+  border: 3px solid #174C4F;
   border-radius: 5px;
   padding: 6px;
   width: 100px;
 }
 
-.btn{
-  background-color:#63C2C7;
-  color:white;
-}
-
-.btn:hover {
-  background-color: #174C4F;
-  color:white;
+.pageBody {
+  margin-left: 250px;
+  margin-top: 6%;
+  margin-right: 1%;
 }
