--- a/src/App.css
+++ b/src/App.css
@@ -96,29 +96,6 @@
   width: 100px;
 }
 
-.btn{
-  background-color:#63C2C7;
-  color:white;
-}
-
-.btn{
-
-  background-color:#63C2C7;
-
-  color:white;
-
-}
-
-
-
-.btn:hover {
-
-  background-color: #174C4F;
-
-  color:white;
-
-}
-
 .title{
   color: #174C4F;
   font-weight: bolder;
@@ -151,7 +128,10 @@
 
 .btn{
   background-color:#63C2C7;
-  color:white;
+  border: 3px solid #174C4F;
+  border-radius: 5px;
+  color:#174C4F;
+  height: 40px;
 }
 
 .btn:hover {
